# flowrite

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  echo_test.yaml  flow_blueprint.yaml  loop_test.yaml  pyproject.toml  sample_workflow.yaml  test_workflow.yaml
.claude/PRPs/issues/: issue-6.md  issue-8.md
.claude/PRPs/issues/completed/: issue-12.md
.claude/PRPs/plans/: simplify-examples-for-local-execution.plan.md  simulation-to-local-execution-mode.plan.md
.github/workflows/: test.yml
dev/docs/: github-actions-maintenance.md
docs/: flow_blueprint.md
examples/: 01_basic_workflow.yaml  02_step_sequences.yaml  03_parallel_execution.yaml  04_loop_execution.yaml  05_complex_dag.yaml  05_foreach_file_processing.yaml  README.md
src/: dsl.py  main.py  types.py  utils.py
src/security/: path.py
tests/: test_bash_conditionals.py  test_command_substitution.py  test_complex_conditions.py  test_condition_evaluation.py  test_core.py  test_dependency_cycles.py  test_edge_cases.py  test_enhanced_diagnostics.py  test_github_actions_variables.py  test_integration_scenarios.py  test_job_workflow.py  test_local_execution.py  test_path_validation.py  test_performance.py  test_variable_substitution.py  test_yaml_errors.py
