[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_backend"

[project]
name = "flowrite-executor"
version = "0.1.0"
description = "YAML workflow executor using Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.6.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
flowrite = "src.main:main"

[tool.uv]
dev-dependencies = []